--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
       </div>
       <div class="text-center">
         <div id ="firstline">
-          <p><span id="usagersconnectes">Usagers connectés : </span><span id="count" class="label label-success"></span></p>
+          <p><span id="usagersconnectes">Usagers connectés : </span><span id="count" class="badge badge-success">1</span></p>
         </div>
         <hr>
         <ul id="users"></ul>
