--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 <div id="m_login" class="modal" tabindex="-1" role="dialog" aria-hidden="true"></div>
 <div id="m_code" class="modal enable-back" tabindex="-1" role="dialog" aria-hidden="true"></div>
 
-<div id="m_user" class="modal" tabindex="-1" role="dialog" aria-hidden="true">
+<div id="m_user" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="container-fluid">
