--- a/m.sc.html
+++ b/m.sc.html
@@ -1,40 +1,36 @@
 <div id="modaleSC" class="modal-dialog" role="document">
   <div class="modal-content shadow">
-    <div class="modal-body text-center">
-      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-        <span aria-hidden="true">&times;</span>
-      </button>
-      <div id="div-move">
-        <svg style="margin-top:3px;" height=19 aria-hidden="true" focusable="false" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="#ffffff" d="M352.201 425.775l-79.196 79.196c-9.373 9.373-24.568 9.373-33.941 0l-79.196-79.196c-15.119-15.119-4.411-40.971 16.971-40.97h51.162L228 284H127.196v51.162c0 21.382-25.851 32.09-40.971 16.971L7.029 272.937c-9.373-9.373-9.373-24.569 0-33.941L86.225 159.8c15.119-15.119 40.971-4.411 40.971 16.971V228H228V127.196h-51.23c-21.382 0-32.09-25.851-16.971-40.971l79.196-79.196c9.373-9.373 24.568-9.373 33.941 0l79.196 79.196c15.119 15.119 4.411 40.971-16.971 40.971h-51.162V228h100.804v-51.162c0-21.382 25.851-32.09 40.97-16.971l79.196 79.196c9.373 9.373 9.373 24.569 0 33.941L425.773 352.2c-15.119 15.119-40.971 4.411-40.97-16.971V284H284v100.804h51.23c21.382 0 32.09 25.851 16.971 40.971z"></path></svg>
+    <div class="modal-header">
+      <div class="head noselect">
+        <div id="divkbytes"><span id="kbytes"></span> Kb</div>
+        <button id="bExitFull" type="button" class="btn">
+          <svg data-toggle="tooltip" data-placement="right" title="Réduire"  height=19 style="margin-bottom: 3px;" aria-hidden="true" focusable="false" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path fill="currentColor" d="M4.686 427.314L104 328l-32.922-31.029C55.958 281.851 66.666 256 88.048 256h112C213.303 256 224 266.745 224 280v112c0 21.382-25.803 32.09-40.922 16.971L152 376l-99.314 99.314c-6.248 6.248-16.379 6.248-22.627 0L4.686 449.941c-6.248-6.248-6.248-16.379 0-22.627zM443.314 84.686L344 184l32.922 31.029c15.12 15.12 4.412 40.971-16.97 40.971h-112C234.697 256 224 245.255 224 232V120c0-21.382 25.803-32.09 40.922-16.971L296 136l99.314-99.314c6.248-6.248 16.379-6.248 22.627 0l25.373 25.373c6.248 6.248 6.248 16.379 0 22.627z"></path></svg>
+        </button>
+        <button id="bFull" type="button" class="btn" data-toggle="tooltip" data-placement="left" title="Mode plein écran">
+          <svg height=18 style="margin-bottom: 3px;" aria-hidden="true" focusable="false" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path fill="currentColor" d="M448 344v112a23.94 23.94 0 0 1-24 24H312c-21.39 0-32.09-25.9-17-41l36.2-36.2L224 295.6 116.77 402.9 153 439c15.09 15.1 4.39 41-17 41H24a23.94 23.94 0 0 1-24-24V344c0-21.4 25.89-32.1 41-17l36.19 36.2L184.46 256 77.18 148.7 41 185c-15.1 15.1-41 4.4-41-17V56a23.94 23.94 0 0 1 24-24h112c21.39 0 32.09 25.9 17 41l-36.2 36.2L224 216.4l107.23-107.3L295 73c-15.09-15.1-4.39-41 17-41h112a23.94 23.94 0 0 1 24 24v112c0 21.4-25.89 32.1-41 17l-36.19-36.2L263.54 256l107.28 107.3L407 327.1c15.1-15.2 41-4.5 41 16.9z"></path></svg>
+        </button>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
       </div>
-      <div id="divkbytes"><span id="kbytes"></span> Kb</div>
-      <button id="bExitFull" type="button" class="btn">
-        <svg style="margin-top:5px;color:#eff8ff;" data-toggle="tooltip" data-placement="right" title="Réduire"  height=19 style="margin-bottom: 3px;" aria-hidden="true" focusable="false" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path fill="currentColor" d="M4.686 427.314L104 328l-32.922-31.029C55.958 281.851 66.666 256 88.048 256h112C213.303 256 224 266.745 224 280v112c0 21.382-25.803 32.09-40.922 16.971L152 376l-99.314 99.314c-6.248 6.248-16.379 6.248-22.627 0L4.686 449.941c-6.248-6.248-6.248-16.379 0-22.627zM443.314 84.686L344 184l32.922 31.029c15.12 15.12 4.412 40.971-16.97 40.971h-112C234.697 256 224 245.255 224 232V120c0-21.382 25.803-32.09 40.922-16.971L296 136l99.314-99.314c6.248-6.248 16.379-6.248 22.627 0l25.373 25.373c6.248 6.248 6.248 16.379 0 22.627z"></path></svg>
-      </button>
-      <div id="sliderReceveur">
-        <div id="divResizeWindow" class="form-group text-center">
-          <button id="bFull" type="button" class="btn" data-toggle="tooltip" data-placement="left" title="Mode plein écran">
-            <svg height=18 style="margin-bottom: 3px;" aria-hidden="true" focusable="false" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path fill="currentColor" d="M448 344v112a23.94 23.94 0 0 1-24 24H312c-21.39 0-32.09-25.9-17-41l36.2-36.2L224 295.6 116.77 402.9 153 439c15.09 15.1 4.39 41-17 41H24a23.94 23.94 0 0 1-24-24V344c0-21.4 25.89-32.1 41-17l36.19 36.2L184.46 256 77.18 148.7 41 185c-15.1 15.1-41 4.4-41-17V56a23.94 23.94 0 0 1 24-24h112c21.39 0 32.09 25.9 17 41l-36.2 36.2L224 216.4l107.23-107.3L295 73c-15.09-15.1-4.39-41 17-41h112a23.94 23.94 0 0 1 24 24v112c0 21.4-25.89 32.1-41 17l-36.19-36.2L263.54 256l107.28 107.3L407 327.1c15.1-15.2 41-4.5 41 16.9z"></path></svg>
-          </button>
-          <div data-toggle="tooltip" data-placement="bottom" title="Resize window" style="display:inline;">
-            <input type="text" id="nresizeWindow" data-provider="slider" data-slider-min="50" data-slider-max="100" data-slider-step="25" data-slider-value="50"/>
-          </div>
-        </div>
-      </div>
-      <div id="sliderEmetteur">
-        <div id="divResizeCanvas" class="form-group text-center">
+
+      <div id="sliderEmetteur" class="mx-auto pt-2 mt-4 row text-center">
+        <div id="divResizeCanvas" class="form-group d-flex mb-1">
           <label id="lresizeCanvas" for="nresizeCanvas">Resize canvas</label>
           <input type="text" id="nresizeCanvas" data-provider="slider" data-slider-min="20" data-slider-max="100" data-slider-step="10" data-slider-value="50"/>
         </div>
-        <div id="divPurete" class="form-group text-center">
+        <div id="divPurete" class="form-group d-flex mb-1">
           <label id="lpurete" for="npurete">Pureté image</label>
           <input type="text" id="npurete" data-provider="slider" data-slider-min="20" data-slider-max="100" data-slider-step="10" data-slider-value="50"/>
         </div>
-        <div id="divRefresh" class="form-group text-center">
+        <div id="divRefresh" class="form-group d-flex mb-0">
           <label id="lrefresh" for="nrefresh">Refresh rate</label>
           <input type="text" id="nrefresh" data-provider="slider" data-slider-min="100" data-slider-max="2000" data-slider-step="50" data-slider-value="100"/>
         </div>
       </div>
+      
+    </div>
+    <div class="modal-body text-center d-flex align-items-center justify-content-center">
       <button id="bShare" type="button" class="btn">Partager mon écran</button>
       <video id="video"></video>
     </div>
