--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <script>
     if (location.pathname != '/wsc/') location.replace(location.protocol+'//'+location.host+'/wsc/');
   </script>
-  <title>wsc v3.1b</title>
+  <title>wsc v3.2</title>
   <meta charset="utf-8">
   <meta name="description" content="WSC web secure chat OIL Online Interative Learning Marie Bruggeman Guy Francoeur">
   <meta name="viewport" content="width=device-width, initial-scale=1">
