--- a/m.sc.html
+++ b/m.sc.html
@@ -9,12 +9,14 @@
         <button id="bFull" type="button" class="btn" data-toggle="tooltip" data-placement="left" title="Mode plein écran">
           <svg height=18 style="margin-bottom: 3px;" aria-hidden="true" focusable="false" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path fill="currentColor" d="M448 344v112a23.94 23.94 0 0 1-24 24H312c-21.39 0-32.09-25.9-17-41l36.2-36.2L224 295.6 116.77 402.9 153 439c15.09 15.1 4.39 41-17 41H24a23.94 23.94 0 0 1-24-24V344c0-21.4 25.89-32.1 41-17l36.19 36.2L184.46 256 77.18 148.7 41 185c-15.1 15.1-41 4.4-41-17V56a23.94 23.94 0 0 1 24-24h112c21.39 0 32.09 25.9 17 41l-36.2 36.2L224 216.4l107.23-107.3L295 73c-15.09-15.1-4.39-41 17-41h112a23.94 23.94 0 0 1 24 24v112c0 21.4-25.89 32.1-41 17l-36.19-36.2L263.54 256l107.28 107.3L407 327.1c15.1-15.2 41-4.5 41 16.9z"></path></svg>
         </button>
-        <button class="btn btn-dafault" type="button" data-toggle="collapse" data-target="#divCollapse" aria-expanded="false" aria-controls="divCollapse">^</button>
+        <button class="btn btn-dafault" type="button" data-toggle="collapse" data-target="#divCollapse" aria-expanded="false" aria-controls="divCollapse">
+          <span aria-hidden="true">^</span>
+        </button>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
-     <div class="collapse multi-collapse" id="divCollapse">
+     <div class="collapse" id="divCollapse">
       <div id="sliderEmetteur" class="mx-auto pt-2 mt-4 row text-center">
         <div id="divResizeCanvas" class="form-group d-flex mb-1">
           <label id="lresizeCanvas" for="nresizeCanvas">Resize canvas</label>
