--- a/m.sc.html
+++ b/m.sc.html
@@ -38,7 +38,7 @@
        </div>
       </div>
       
-      <video id="video"></video>
+      <div id="div_video"><video id="video"></video></div>
     </div>
   </div>
 </div>
